--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.5.4",
-    "tailwindcss": "^4.0.15"
+    "@astrojs/tailwind": "^6.0.2",
+    "tailwindcss": "^3.4.0"
   }
 }
