--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.4",
     "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.5.4",
+    "clsx": "^2.1.1",
     "tailwindcss": "^3.4.0"
   }
 }
